--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -126,4 +126,9 @@
      <string name="quick_pulldown_none">Disabled</string>
      <string name="quick_pulldown_right">Pulldown statusbar from right side</string>
      <string name="quick_pulldown_left">Pulldown statusbar from left side</string>
+    
+    <!-- Power menu on secure lockscreen -->
+     <string name="lockscreen_enable_power_menu_title">Allow power menu on lockscreen</string>
+     <string name="lockscreen_enable_power_menu_summary">Allow accessing power menu on secure
+          lockscreen</string>
 </resources>
