--- a/res/xml/blaze_house_button.xml
+++ b/res/xml/blaze_house_button.xml
@@ -21,6 +21,12 @@
         <PreferenceCategory
          android:title="@string/power_button_category" >
          
+        <com.blaze.house.preferences.SystemSettingSwitchPreference
+               android:key="lockscreen_enable_power_menu"
+               android:title="@string/lockscreen_enable_power_menu_title"
+               android:summary="@string/lockscreen_enable_power_menu_summary"
+               android:defaultValue="true" />
+         
              <com.blaze.house.preferences.SystemSettingListPreference
 	          android:key="torch_power_button_gesture"
                   android:dialogTitle="@string/torch_power_button_gesture_title"
