--- a/res/xml/blaze_house_statusbar.xml
+++ b/res/xml/blaze_house_statusbar.xml
@@ -60,6 +60,12 @@
             android:defaultValue="false"
             android:fragment="com.blaze.house.fragments.StatusBarLogo" />
 
+        <Preference
+            android:key="battery_bar_category"
+            android:title="@string/battery_bar_title"
+            android:summary="@string/battery_bar_summary"
+            android:fragment="com.blaze.house.fragments.BatteryBar" />
+
     </PreferenceCategory>
     
     <PreferenceCategory
