--- a/res/xml/blaze_house_button.xml
+++ b/res/xml/blaze_house_button.xml
@@ -21,6 +21,12 @@
         <PreferenceCategory
          android:title="@string/power_button_category" >
          
+         <Preference
+               android:key="power_menu"
+               android:title="@string/power_menu_title"
+               android:summary="@string/power_menu_title_summary"
+               android:fragment="com.blaze.house.fragments.Powermenu" />
+         
         <com.blaze.house.preferences.SystemSettingSwitchPreference
                android:key="lockscreen_enable_power_menu"
                android:title="@string/lockscreen_enable_power_menu_title"
