--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -377,4 +377,8 @@
     <string name="custom_battery_bottom">Margin Bottom</string>
     <string name="custom_battery_left">Margin Left</string>
     <string name="custom_battery_right">Margin Right</string>
+
+    <!-- Power menu and dialogs opacity -->
+    <string name="power_menu_transparency">Power/reboot menu opacity</string>
+    <string name="power_menu_dialog_dim">Power/reboot dialog dim background amount</string>
 </resources>
