--- a/res/xml/blaze_house_button.xml
+++ b/res/xml/blaze_house_button.xml
@@ -26,6 +26,20 @@
                android:title="@string/power_menu_title"
                android:summary="@string/power_menu_title_summary"
                android:fragment="com.blaze.house.fragments.Powermenu" />
+        
+        <com.blaze.house.preferences.SystemSettingSeekBarPreference
+              android:key="transparent_power_menu"
+              android:title="@string/power_menu_transparency"
+              android:max="100"
+              android:min="0"
+              android:defaultValue="100" />
+
+       <com.blaze.house.preferences.SystemSettingSeekBarPreference
+             android:key="transparent_power_dialog_dim"
+             android:title="@string/power_menu_dialog_dim"
+             android:max="100"
+             android:min="0"
+             android:defaultValue="50" />
          
         <com.blaze.house.preferences.SystemSettingSwitchPreference
                android:key="lockscreen_enable_power_menu"
