BlazeHouse: Power/reboot menu transparency (1/2)
Signed-off-by: Hưng Phan <phandinhhungvp2001@gmail.com>

--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -218,4 +218,8 @@
     <string name="powermenu_users">Users</string>
     <string name="powermenu_logout">Logout</string>
     <string name="powermenu_emergency">Emergency</string> 
+
+    <!-- Power menu and dialogs opacity -->
+    <string name="power_menu_transparency">Power/reboot menu opacity</string>
+    <string name="power_menu_dialog_dim">Power/reboot dialog dim background amount</string>
 </resources>
