--- a/res/xml/blaze_house_notifications.xml
+++ b/res/xml/blaze_house_notifications.xml
@@ -18,5 +18,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/notifications_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    
+    <PreferenceCategory
+        android:title="@string/general_category">
+        
+        <com.blaze.house.preferences.SystemSettingSwitchPreference
+            android:key="less_boring_heads_up"
+            android:title="@string/less_boring_heads_up_title"
+            android:summary="@string/less_boring_heads_up_summary"
+            android:defaultValue="false" />
+
+        <Preference
+            android:key="heads_up_notifications"
+            android:summary="@string/heads_up_notifications_summary"
+            android:title="@string/heads_up_notifications"
+            android:fragment="com.blaze.house.fragments.HeadsUpSettings"/>
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
