BlazeHouse: Add battery styles customizations [2/2]
- Also Re-arrange statusbar custs

Co-authored-by: althafvly <althafvly@gmail.com>
Co-authored-by: Christian Oder <myself5@carbonrom.org>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Change-Id: I54fc2eb194d41dd0a92aeca154bc84fa22c47540
Signed-off-by: S I P U N <sipunkumar85@gmail.com>

--- a/res/xml/blaze_house_statusbar.xml
+++ b/res/xml/blaze_house_statusbar.xml
@@ -40,6 +40,12 @@
         android:order="-230">
             <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
         </Preference>
+        
+        <Preference
+            android:key="sbbatteryicons"
+            android:title="@string/status_bar_battery_style_title"
+            android:summary="@string/status_bar_battery_style_summary"
+            android:fragment="com.blaze.house.fragments.BatteryStyleSettings" />
 
     </PreferenceCategory>
     
