--- a/res/xml/blaze_house_quicksettings.xml
+++ b/res/xml/blaze_house_quicksettings.xml
@@ -33,6 +33,17 @@
                android:entries="@array/quick_pulldown_entries"
                android:entryValues="@array/quick_pulldown_values"
                android:defaultValue="0" />
+
+          <com.blaze.house.preferences.SystemSettingSeekBarPreference
+               android:key="qs_transparency"
+               android:title="@string/qs_transparency_title"
+               android:summary="@string/qs_transparency_summary"
+               android:defaultValue="100"
+               settings:interval="1"
+               android:max="100"
+               settings:units="%"         
+               android:min="1" />
+
      </PreferenceCategory>
     
     <PreferenceCategory
