BlazeHouse: Pulse: initial checkin for Android 13 [2/2]
Change-Id: I0c454a597beb9a3627db71074d65b065958496c2
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>

--- a/res/xml/blaze_house_lockscreen.xml
+++ b/res/xml/blaze_house_lockscreen.xml
@@ -61,6 +61,12 @@
             android:max="80"
             settings:min="1" />
 
+     <Preference
+        android:key="pulse_settings"
+        android:fragment="com.blaze.house.fragments.PulseSettings"
+        android:title="@string/pulse_settings"
+        android:summary="@string/pulse_settings_summary" />
+
     </PreferenceCategory>
     
     <PreferenceCategory
