--- a/res/xml/blaze_house_quicksettings.xml
+++ b/res/xml/blaze_house_quicksettings.xml
@@ -44,6 +44,12 @@
                settings:units="%"         
                android:min="1" />
 
+          <com.blaze.house.preferences.SystemSettingSwitchPreference
+               android:key="qs_dual_tone"
+               android:title="@string/qs_dual_tone_title"
+               android:summary="@string/qs_dual_tone_summary"
+               android:defaultValue="true" />
+
           <com.blaze.house.preferences.SystemSettingListPreference
                android:key="custom_transitions_page_tile"
                android:entries="@array/qs_transitions_entries"
