--- a/res/xml/blaze_house_quicksettings.xml
+++ b/res/xml/blaze_house_quicksettings.xml
@@ -44,6 +44,13 @@
                settings:units="%"         
                android:min="1" />
 
+          <com.blaze.house.preferences.SystemSettingListPreference
+               android:key="custom_transitions_page_tile"
+               android:entries="@array/qs_transitions_entries"
+               android:entryValues="@array/qs_transitions_values"
+               android:summary="%s"
+               android:title="@string/qs_transitions_title" />
+
      </PreferenceCategory>
     
     <PreferenceCategory
