BlazeHouse: Add statusbar clock preferences
Co-authored-by: Lars Greiss <kufikugel@googlemail.com>
Co-authored-by: Ali B <abittin@gmail.com>
Co-authored-by: LuK1337 <priv.luk@gmail.com>
Change-Id: I078403f2c705e42dbff7381ea410567261911a64
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>

--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -45,6 +45,11 @@
     <string name="reset">Reset</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
+
+    <!-- Units --> 
+    <string name="unit_seconds">seconds</string>
+    <string name="unit_milliseconds">milliseconds</string>
+    <string name="unit_pixels">dp</string>
     
     <!-- Sub category -->
     <string name="general_category">General</string>
@@ -418,4 +423,16 @@
     <string name="qs_tile_animation_interpolator_overshootInterpolator">Overshoot</string>
     <string name="qs_tile_animation_interpolator_anticipateInterpolator">Anticipate</string>
     <string name="qs_tile_animation_interpolator_anticipateOvershootInterpolator">Anticipate overshoot</string>
+
+    <!-- Statusbar clock -->
+    <string name="clocksettings_category_title">Clock Customizations</string>
+    <string name="status_bar_clock_position_title">Clock position</string>
+    <string name="status_bar_clock_position_left">Left</string>
+    <string name="status_bar_clock_position_right">Right</string>
+    <string name="status_bar_clock_position_center">Center</string>
+    <string name="status_bar_am_pm_title">Clock AM/PM style</string>
+    <string name="status_bar_am_pm_disabled">24-hour clock is enabled</string>
+    <string name="status_bar_am_pm_normal">Normal</string>
+    <string name="status_bar_am_pm_small">Small</string>
+    <string name="status_bar_am_pm_hidden">Hidden</string>
 </resources>
