--- a/res/xml/blaze_house_quicksettings.xml
+++ b/res/xml/blaze_house_quicksettings.xml
@@ -57,6 +57,14 @@
                android:summary="show hide brightness percentage text"
                android:defaultValue="false" />
 
+          <com.blaze.house.preferences.SystemSettingListPreference
+               android:key="qs_panel_style"
+               android:title="@string/qs_styles_title"
+               android:entries="@array/qs_styles_entries"
+               android:entryValues="@array/qs_styles_values"
+               android:summary="%s"
+               android:defaultValue="0" />
+
      </PreferenceCategory>
     
     <PreferenceCategory
