--- a/res/values/blaze_dimens.xml
+++ b/res/values/blaze_dimens.xml
@@ -19,4 +19,11 @@
      <dimen name="blaze_radius_merge">5dp</dimen>
      <dimen name="blaze_pref_horizontal_padding">16dp</dimen>
      <dimen name="blaze_pref_horizontal_padding-negative">-16dp</dimen>
+     
+     <!-- Color Picker -->
+    <dimen name="picker_circle_preview_size">26dp</dimen>
+    <dimen name="oval_notification_size">26dp</dimen>
+    <dimen name="alert_dialog_padding_material">20dp</dimen>
+    <dimen name="color_preference_width">18dip</dimen>
+    <dimen name="color_preference_height">18dip</dimen>
 </resources>
