--- a/res/xml/blaze_house_button.xml
+++ b/res/xml/blaze_house_button.xml
@@ -65,6 +65,22 @@
                   android:title="@string/volume_button_music_control_title"
                   android:summary="@string/volume_button_music_control_summary"
                   android:defaultValue="false" />
+
+            <com.blaze.house.preferences.SystemSettingSwitchPreference
+                 android:key="VOLUME_TEXTVIEW"
+                 android:title="@string/volume_persen_switch_title"
+                 android:summary="@string/volume_persen_switch_summary"
+                 android:defaultValue="false" />
+
+           <com.blaze.house.preferences.SystemSettingListPreference
+                android:key="VOLUME_TEXTVIEW_STYLE"                                                   
+                android:title="@string/volume_persen_style_title"
+                android:summary="%s"
+                android:dialogTitle="@string/volume_persen_style_title"
+                android:entries="@array/volume_persen_style_entries"
+                android:dependency="VOLUME_TEXTVIEW"                                                     
+                android:entryValues="@array/volume_persen_style_values"
+                android:defaultValue="0" />
                   
              <com.blaze.house.preferences.SystemSettingSwitchPreference
                   android:key="volume_key_cursor_control"
