--- a/res/xml/blaze_house_statusbar.xml
+++ b/res/xml/blaze_house_statusbar.xml
@@ -19,6 +19,17 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
     
     <PreferenceCategory
+        android:title="@string/network_traffic_title">
+
+        <Preference
+            android:key="network_traffic_settings"
+            android:title="@string/network_traffic_title"
+            android:summary="@string/network_traffic_summary"
+            android:fragment="com.blaze.house.fragments.NetworkTrafficSettings"/>
+
+    </PreferenceCategory>
+    
+    <PreferenceCategory
         android:key="icons_category"
         android:title="@string/statusbar_icons">
 
