--- a/res/xml/blaze_house_statusbar.xml
+++ b/res/xml/blaze_house_statusbar.xml
@@ -30,6 +30,12 @@
             <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
         </Preference>
 
+       <com.blaze.house.preferences.SystemSettingSwitchPreference
+            android:key="statusbar_colored_icons"
+            android:title="@string/statusbar_colored_icons_title"
+            android:summary="@string/statusbar_colored_icons_summary"
+            android:defaultValue="false" />
+
     </PreferenceCategory>
     
     <PreferenceCategory
