--- a/res/xml/blaze_house_statusbar.xml
+++ b/res/xml/blaze_house_statusbar.xml
@@ -47,6 +47,12 @@
             android:summary="@string/status_bar_battery_style_summary"
             android:fragment="com.blaze.house.fragments.BatteryStyleSettings" />
 
+       <com.blaze.house.preferences.SystemSettingSwitchPreference
+            android:key="statusbar_colored_icons"
+            android:title="@string/statusbar_colored_icons_title"
+            android:summary="@string/statusbar_colored_icons_summary"
+            android:defaultValue="false" />
+
     </PreferenceCategory>
     
     <PreferenceCategory
