BlazeHouse: Import QS panel layout settings[2/2]
Co-authored-by: minaripenguin <minaripenguin@users.noreply.github.com>

--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -52,6 +52,7 @@
     <string name="media_category">Media</string>
     <string name="fingerprint_category">Fingerprint</string>
     <string name="monet_category">Monet Customization</string>
+    <string name="qs_tile_title">QS tile</string>
     
     <!-- [CHAR_LIMIT=NONE] Developer Settings: Title of the settings category for theme overlays. -->
     <string name="theme_customization_category">Theming</string>
@@ -373,4 +374,20 @@
     <!-- QS Dual Tone Colors -->
     <string name="qs_dual_tone_title">QS dual tone</string>
     <string name="qs_dual_tone_summary">Use dual tone background colors</string>
+    
+    <!-- QS tiles layout -->
+    <string name="qs_layout_category_title">QuickSettings</string>
+    <string name="qs_tile_layout_title">QS tiles layout</string>
+    <string name="qs_tile_layout_summary">Customize QuickSettings panel</string>
+    <string name="qs_tiles_layout_category">Tiles layout</string>
+    <string name="qs_rows_portrait_title">Rows (Portrait)</string>
+    <string name="qqs_rows_portrait_title">Rows (Quick QS portrait)</string>
+    <string name="qs_columns_portrait_title">Columns (Portrait)</string>
+    <string name="qs_apply_change_button_title">Apply change</string>
+    <string name="qs_apply_change_failed">Failed to apply change</string>
+    <string name="qs_tile_hide_label_title">Hide labels</string>
+    <string name="qs_tile_hide_label_summary">Show only icon for QS tiles</string>
+    <string name="qs_tile_vertical_layout_title">Vertical layout</string>
+    <string name="qs_tile_vertical_layout_summary">Enable vertical layout for QS tiles</string>
+    <string name="qs_tile_label_size_title">Label text size</string>
 </resources>
