--- a/res/xml/blaze_house_quicksettings.xml
+++ b/res/xml/blaze_house_quicksettings.xml
@@ -90,6 +90,15 @@
      <PreferenceCategory
           android:title="@string/qs_tile_title">
 
+            
+          <com.blaze.house.preferences.SystemSettingListPreference
+              android:key="qs_ui_style"
+        	    android:title="@string/qs_ui_title"
+        	    android:entries="@array/qs_ui_entries"
+        	    android:entryValues="@array/qs_ui_values"
+        	    android:summary="%s"
+        	    android:defaultValue="0" />
+            
           <com.blaze.house.preferences.SystemSettingSeekBarPreference
             android:key="qs_layout_columns"
             android:title="@string/qs_columns_portrait_title"
