BlazeHouse: QS header images extended [2/2]
* Create a page to display header previews and present a proper interface to user
* Add options to customize:
    * tint
    * height
    * paddings
    * landscape (toggle)
    * transparency
* Add an option to pick a custom header image from storage

Co-authored-by: rdx420 <padraramesh420@gmail.com>

 *Fix min value of Seekbar & ImagePicker

--- a/res/xml/blaze_house_quicksettings.xml
+++ b/res/xml/blaze_house_quicksettings.xml
@@ -65,13 +65,11 @@
                android:summary="%s"
                android:defaultValue="0" />
 
-          <com.blaze.house.preferences.SystemSettingSeekBarPreference
+          <Preference
                android:key="qs_header_image"
+               android:fragment="com.blaze.house.fragments.qs.QsHeaderImageSettings"
                android:title="@string/qs_header_image_title"
-               android:defaultValue="0"
-               settings:interval="1"
-               android:max="36"
-               android:min="0" />
+               android:summary="@string/qs_header_image_summary" />
 
      </PreferenceCategory>
     
