--- a/res/xml/blaze_house_quicksettings.xml
+++ b/res/xml/blaze_house_quicksettings.xml
@@ -65,6 +65,14 @@
                android:summary="%s"
                android:defaultValue="0" />
 
+          <com.blaze.house.preferences.SystemSettingSeekBarPreference
+               android:key="qs_header_image"
+               android:title="@string/qs_header_image_title"
+               android:defaultValue="0"
+               settings:interval="1"
+               android:max="36"
+               android:min="0" />
+
      </PreferenceCategory>
     
     <PreferenceCategory
