BlazeHouse: Add Resizable QS header Space [2/2]
Signed-off-by: rdx420 <padraramesh420@gmail.com>

--- a/res/xml/blaze_house_quicksettings.xml
+++ b/res/xml/blaze_house_quicksettings.xml
@@ -71,6 +71,14 @@
                android:title="@string/qs_header_image_title"
                android:summary="@string/qs_header_image_summary" />
 
+          <com.blaze.house.preferences.SystemSettingSeekBarPreference
+               android:key="qs_header_size"
+               android:title="@string/large_qs_switch_title"
+               android:max="400"
+               settings:min="110"
+               settings:interval="1"
+               android:defaultValue="220" />
+
      </PreferenceCategory>
     
     <PreferenceCategory
