--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -494,4 +494,7 @@
     <string name="qs_header_image_padding_top_title">Top padding</string>
     <string name="file_header_select_title">Select local image</string>
     <string name="file_header_select_summary">Select image from storage</string>
+    
+    <!-- QS Header Size -->
+    <string name="large_qs_switch_title">QS Header Size</string>
 </resources>
